<resources>

    <string name="app_name">IATS</string>
    <string name="text_login">Log In</string>
    <string name="text_register">Get Started</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_save">Save</string>
    <string name="text_dont_have_account">Don\'t have account?</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_become_member">BECOME A MEMBER</string>
    <string name="text_member">I\'m IATS Member</string>
    <string name="text_agree">I agree to the AD/ART and SNIATS</string>
    <string name="text_tnc">Terms &amp; Conditions</string>
    <string name="text_adart">AD/ART</string>
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="text_cart">Cart</string>
    <string name="text_search">Search</string>
    <string name="text_description">Description</string>
    <string name="text_seemore">see more&#8230;</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_photo">Photo</string>
    <string name="text_video">Video</string>
    <string name="text_watermark_on">Watermark ON</string>
    <string name="text_watermark_off">Watermark OFF</string>
    <string name="text_change_position">Change Position</string>
    <string name="text_your_caption">Your caption</string>
    <string name="text_add_location">Add Location</string>
    <string name="text_comments">Comments</string>
    <string name="text_loggedout">You have successfully logged out</string>
    <string name="text_edit">edit</string>
    <string name="text_image_description">Description</string>
    <string name="text_my_orders">My Orders</string>
    <string name="text_grand_total">Grand Total</string>
    <string name="text_buy_now">Buy Now</string>
    <string name="text_tags_hint">Type your tags</string>
    <string name="text_all">All</string>
    <string name="text_tags">Tags</string>
    <string name="text_products">Products</string>
    <string name="text_profiles">Profiles</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_membership">IATS Membership</string>
    <string name="text_pay">Pay Now</string>

    <!-- Menu -->
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_history">History</string>
    <string name="menu_wishlist">Wish List</string>
    <string name="menu_order_status">Buying Status</string>
    <string name="menu_signout">Sign Out</string>

    <!-- Chat -->
    <string name="text_chat">Chats</string>
    <string name="text_type_message">Type your message&#8230;</string>

    <!-- Form -->
    <string name="input_username">Username</string>
    <string name="input_fullname">Fullname</string>
    <string name="input_password">Password</string>
    <string name="input_email">E-mail</string>
    <string name="input_phone">Mobile</string>
    <string name="input_address">Address</string>
    <string name="input_city">City</string>
    <string name="input_bio">Bio</string>

    <!-- Errors -->
    <string name="error_empty_form">Please complete the form</string>
    <string name="error_submit_post">There\'s a problem when submitting your data, please try again</string>
    <string name="error_select_location">Please select your location</string>
    <string name="error_item_unavailable">Selected item stock is unavailable</string>

    <!-- Intro -->
    <string name="intro_header_a">Connecting</string>
    <string name="intro_description_a">The best trimmers in Indonesia</string>
    <string name="intro_header_b">Create.Share.</string>
    <string name="intro_description_b">Get Inspired. Be Inspiring</string>
    <string name="intro_header_c">Smart Buying</string>
    <string name="intro_description_c">It has never been easier</string>

    <!-- Register -->

    <!-- Errors -->
    <string name="error_checktnc">Please confirm if you agree with Terms &amp; Conditions</string>

    <!-- Product -->
    <string name="text_confirm_delete_cart">Are you sure want to remove this item?</string>

    <string name="tnc_iats">
    Sesuai dengan hasil keputusan Dewan Pengurus Pusat pada Summit 2017, maka seluruh member IATS® sepakat untuk melakukan Standarisasi Nasional (SNIATS) dalam hal kualitas pengerjaan dan penggunaan bahan baku pendukung\n\n
    Seluruh member IATS® wajib melakukan penyeragaman SNIATS paling lambat dalam kurun waktu 6 (enam) bulan sejak Summit 2017 berlangsung\n\n
    Seluruh member IATS® wajib memberikan Garansi Nasional untuk pengerjaan selama 1 (satu) Tahun
    </string>

    <string name="tnc_adart">
    Indonesia Authorized Trimmer Summit (IATS®) merupakan asosiasi pengrajin interior mobil (Trimmer) pertama &amp; terbesar di Indonesia yang diakui secara Sah dan berbadan Hukum melalui KEPUTUSAN MENTERI HUKUM DAN HAK ASASI MANUSIA REPUBLIK INDONESIA NOMOR AHU-0003005.AH.01.07.TAHUN 2017\n\nIATS didirikan oleh Oscar Widjaja yang merangkap sebagai Ketua Umum IATS dan telah menunjuk 6 orang Dewan Pengurus Pusat yang terdiri dari Profesional &amp; Trimmer terbaik di Indonesia\n\n
Kekuasaan tertinggi berada di keputusan Rapat Anggota &amp; Rapat Kerja Nasional (Summit 2017) yang dipimpin oleh Jajaran Dewan Pengurus Pusat IATS dan diikuti oleh seluruh member IATS yang merupakan Trimmer terbaik di Indonesia\n\n
        Seluruh memberi IATS® wajib melakukan iuran bulanan yang telah disepakati dalam Summit 2017
\n\n
Member resmi IATS® adalah yang mengindahkan, menjunjung tinggi dan melaksanakan seluruh keputusan Summit 2017 dan diakui oleh Dewan Pengurus Pusat yang ditandai dengan adanya Kartu Tanda Anggota IATS serta tercantum dalam website resmi www.indonesiatrimmer.com/memberlist
\n\n
Nama &amp; segala bentuk support serta benefit dari Associate Parter dalam bentuk apapun sifatnya merupakan CONFIDENTIAL (RAHASIA dan TERTUTUP). Tidak dapat disebar-luaskan kepada pihak manapun tanpa sepengetahuan Pengurus Pusat.
\n\n
Seluruh benefit dari IATS® hanya dapat dinikmati oleh Member resmi
\n\n
Segala bentuk kerjasama dengan pihak external, dalam bentuk benefit, dukungan, dll harus malalui pengetahuan dan persetujuan Dewan Pengurus Pusat dan melalui prosedur resmi IATS®
\n\n
Untuk menjadi member ataupun ingin melakukan kerjasama dengan IATS silahkan hubungi Hotline IATS di 021-30055169.
    </string>

    <string name="text_subscribe">
        Please pay your monthly membership fee to enjoy all of our benefits\n\n
        Membership fee INCLUDES\n
        IATS Suspender - 1 pack (100 pcs)\n
        IATS Warranty Tag - 1 pack (25 pcs)
        \n\n
        SPECIAL DISCOUNTS\n for all associate partners products\n
        Dunlopillo\n
        Amann Group\n
        First Class\n
        Azeth\n
        Zenda\n
        Ecoleder\n
        and many more
    </string>

    <!--
    Page Thank You

    Thank You!

    We are now processing your membership payment
    Your account will be enabled soon
    -->

    <!-- Dummy -->
    <string name="dummy_tnc">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
    </string>
    <string name="dummy_username">Official.IATS</string>
    <string name="dummy_message">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dummy_product_name">Wollsdorf</string>
    <string name="dummy_product_brand">-Alcantara</string>
    <string name="dummy_product_price">Rp 99.999.000,-</string>
    <string name="dummy_location">Alterpro Automotive</string>
    <string name="dummy_date">01 Jan 2017</string>
</resources>
