<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:icon="@drawable/ic_user_white"
            android:orderInCategory="0"
            android:title="@string/menu_my_profile" />
        <item
            android:icon="@drawable/ic_padlock_white"
            android:orderInCategory="1"
            android:title="@string/menu_change_password" />
        <item
            android:icon="@drawable/ic_credit_card_white"
            android:orderInCategory="2"
            android:title="@string/menu_payment_method" />
        <item
            android:icon="@drawable/ic_history_white"
            android:orderInCategory="3"
            android:title="@string/menu_history" />
        <item
            android:icon="@drawable/ic_star_white"
            android:orderInCategory="4"
            android:title="@string/menu_wishlist" />
        <item
            android:icon="@drawable/ic_shopping_bag_white"
            android:orderInCategory="5"
            android:title="@string/menu_order_status" />
        <item
            android:icon="@drawable/ic_logout_white"
            android:orderInCategory="6"
            android:title="@string/menu_signout" />
    </group>
</menu>