<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:contentPadding="2dp"
    android:layout_marginStart="6dp"
    android:layout_marginBottom="6dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/photo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/dummy_username"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy_001"
                android:background="@drawable/bg_shop_item" />

        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/dummy_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pnameView"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/dummy_product_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pbrandView"
            android:textColor="@color/colorfontDark"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:text="@string/dummy_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ppriceView"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold"
            android:textAlignment="textEnd"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="4dp" />

    </LinearLayout>
</android.support.v7.widget.CardView>