<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hoiyen.iats.activities.RegisterActivity">

    <TextView
        android:id="@+id/registerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="Join Us"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user_white"
            android:drawablePadding="@dimen/input_padding"
            android:drawableStart="@drawable/ic_user_white"
            android:ems="10"
            android:hint="@string/input_username"
            android:inputType="textPersonName"
            android:textAppearance="@style/FormInput.TextAppearance" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_padlock_white"
            android:drawablePadding="@dimen/input_padding"
            android:drawableStart="@drawable/ic_padlock_white"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textAppearance="@style/FormInput.TextAppearance" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_white"
            android:drawablePadding="@dimen/input_padding"
            android:drawableStart="@drawable/ic_email_white"
            android:ems="10"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/FormInput.TextAppearance" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_smartphone_white"
            android:drawablePadding="@dimen/input_padding"
            android:drawableStart="@drawable/ic_smartphone_white"
            android:ems="10"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:textAppearance="@style/FormInput.TextAppearance" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        style="@style/FormButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        android:text="@string/text_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
